# flask_club_villa_elisa

./: README.md  docker-compose.yml
admin/: Dockerfile  README.md  app.py  pyproject.toml
admin/public/: style.css
admin/public/js/: admin.js
admin/src/core/: commands.py  database.py  seeds.py  utils.py
admin/src/core/auth/: __init__.py  permission.py  role.py  role_permission.py  user_role.py  users.py
admin/src/core/discipline/: __init__.py  discipline.py  member_discipline.py
admin/src/core/member/: __init__.py  member.py
admin/src/core/payments/: __init_.py  __init__.py  invoice.py  payment.py
admin/src/core/system_config/: __init__.py  system_config.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: auth.py  cdn.py  discipline.py  issues.py  members.py  payments.py  profile.py  system_config.py  users.py
admin/src/web/controllers/api/: __init__.py  auth.py  club.py  me.py  members.py  statistics.py
admin/src/web/forms/: discipline.py  member.py  payments.py  users.py
admin/src/web/helpers/: get_header_info.py  handlers.py
admin/src/web/templates/: _render_errors.html  _render_field.html  error.html  home.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/discipline/: create.html  enrollment.html  export.html  index.html  show.html  update.html
admin/src/web/templates/issues/: index.html
admin/src/web/templates/members/: add.html  create.html  export.html  index.html  license.html  license_pdf.html  show.html  update.html
admin/tests/: test_web.py
portal/: .dockerignore  (+9 more)
(+45 files in other folders)
