[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["David Franco <francodavid20@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
Flask-RESTful = "^0.3.9"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
email-validator = "^1.3.0"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
